--- a/V2/server/package.json
+++ b/V2/server/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.16.0",
-    "cors": "^2.8.5",
-    "node-pty": "^1.0.0"
+    "cors": "^2.8.5"
   }
 }
