--- a/panel/server/package.json
+++ b/panel/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http-proxy": "^1.18.1",
     "ssh2-promise": "^1.0.3",
     "ws": "^8.16.0"
   },
